--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,4 @@ script:
   - export CC=/usr/bin/gcc-6
   - export CXX=/usr/bin/g++-6
   - gcc -v && g++ -v && cmake --version
-  g++ main.cpp
+  - g++ main.cpp
